# ai_agents

./: .gitignore  README.md  SYSTEM_MASTER_SPEC.md  TODO.md  main.py  pyproject.toml  test_manual.py  testing.md
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  CODE_DEEP_DIVE.md  TESTING_GUIDE.md  TEST_AND_IMPROVEMENT_GUIDE.md  improve.md
src/: __init__.py
src/core/: __init__.py  cost_guard.py  intent_router.py  model_router.py  workflow_engine.py
tests/: test_core.py  test_cost_guard.py
